--- a/index.html
+++ b/index.html
@@ -38,9 +38,39 @@
 
         <main>
             <section class="section-about">
-                <h2 class="heading-secondary">
-                    Exciting tours for adventurous people
-                </h2>
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exciting tours for adventurous people
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            You're going to fall in love with nature
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Voluptates, quas. Quisquam, quae. Quisquam
+                            voluptates, quae, quas, quidem voluptate quos
+                            voluptatibus quibusdam quod quia. Quisquam
+                            voluptates, quae, quas, quidem voluptate quos
+                            voluptatibus quibusdam quod quia.
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Live adventures like you never have before
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Voluptates, quas. Quisquam, quae. Quisquam
+                            voluptates, quae, quas, quidem voluptate quos
+                            voluptatibus quibusdam quod quia.
+                        </p>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">Image composition</div>
+                </div>
             </section>
         </main>
     </body>
