--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <link rel="stylesheet" href="css/icon-font.css" />
         <link rel="stylesheet" href="css/main.css" />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-
+        <script
+            src="https://kit.fontawesome.com/9c8ef3f598.js"
+            crossorigin="anonymous"
+        ></script>
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
@@ -69,7 +72,23 @@
                         </p>
                         <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
-                    <div class="col-1-of-2">Image composition</div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img
+                                src="img/nat-1-large.jpg"
+                                alt="a photo of a forest and a river flowing through it"
+                                class="composition__photo composition__photo--p1"
+                            /><img
+                                src="img/nat-2-large.jpg"
+                                alt="a photo of a road and landscape, with someone cycling"
+                                class="composition__photo composition__photo--p2"
+                            /><img
+                                src="img/nat-3-large.jpg"
+                                alt="a photo of a mountain and narrow track for hiking"
+                                class="composition__photo composition__photo--p3"
+                            />
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
