--- a/index.html
+++ b/index.html
@@ -91,6 +91,29 @@
                     </div>
                 </div>
             </section>
+
+            <section class="section-features">
+                <i class="fa-solid fa-globe"></i>
+
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i
+                                class="feature-box__icon fa-solid fa-earth-asia"
+                            ></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Explore the world
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Voluptates, quas. Quisquam,
+                                quae. Quisquam voluptates, quae, quas, quidem
+                                voluptate quos voluptatibus quibusdam quod quia.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
