--- a/index.html
+++ b/index.html
@@ -96,11 +96,47 @@
                 <div class="row">
                     <div class="col-1-of-4">
                         <div class="feature-box">
-                            <i
-                                class="feature-box__icon fa-solid fa-earth-asia"
-                            ></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">
                                 Explore the world
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Voluptates, quas. Quisquam,
+                                quae. Quisquam voluptates, quae, quas, quidem
+                                voluptate quos voluptatibus quibusdam quod quia.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Meet Nature
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Voluptates, quas. Quisquam,
+                                quae. Quisquam voluptates, quae, quas, quidem
+                                voluptate quos voluptatibus quibusdam quod quia.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Find your way
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Voluptates, quas. Quisquam,
+                                quae. Quisquam voluptates, quae, quas, quidem
+                                voluptate quos voluptatibus quibusdam quod quia.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Live a fabulous life
                             </h3>
                             <p class="feature-box__text">
                                 Lorem ipsum dolor sit amet consectetur
