Added and Styled submit button on the form

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                         >Email Address</label
                                     >
                                 </div>
-                                <div class="form__group">
+                                <div class="form__group u-margin-bottom-small">
                                     <div class="form__radio-group">
                                         <input
                                             type="radio"
@@ -400,6 +400,12 @@
                                             >Large tour group</label
                                         >
                                     </div>
+                                </div>
+
+                                <div class="form__group">
+                                    <button class="btn btn-green">
+                                        Next step &rarr;
+                                    </button>
                                 </div>
                             </form>
                         </div>
