Added and Styled footer section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         ></script>
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
+
     <body>
         <header class="header">
             <div class="header__logo-box">
@@ -421,45 +422,42 @@
                     alt="Full logo"
                     class="footer__logo"
                 />
-                <div class="row">
-                    <div class="col-1-of-2">
-                        <div class="footer__navigation">
-                            <ul class="footer__list">
-                                <li class="footer__item">
-                                    <a href="#" class="footer__link">Company</a>
-                                </li>
-                                <li class="footer__item">
-                                    <a href="#" class="footer__link"
-                                        >Contact us</a
-                                    >
-                                </li>
-                                <li class="footer__item">
-                                    <a href="#" class="footer__link">Carrers</a>
-                                </li>
-                                <li class="footer__item">
-                                    <a href="#" class="footer__link"
-                                        >Privacy policy</a
-                                    >
-                                </li>
-                                <li class="footer__item">
-                                    <a href="#" class="footer__link">Terms</a>
-                                </li>
-                            </ul>
-                        </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Company</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Contact us</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Carrers</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link"
+                                    >Privacy policy</a
+                                >
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Terms</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="col-1-of-2">
-                        <p class="footer__copy-right">
-                            Built by
-                            <a href="#" class="footer__link">ADARSH V DESAI</a>
-                            for the coursework of online course
-                            <a href="#" class="footer__link"
-                                >ADVANCED CSS AND SASS</a
-                            >. Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Ipsam, voluptatum? Repellendus
-                            corporis rem suscipit expedita mollitia vero ipsa
-                            quasi est quas.
-                        </p>
-                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copy-right">
+                        Built by
+                        <a href="#" class="footer__link">ADARSH V DESAI</a>
+                        for the coursework of online course
+                        <a href="#" class="footer__link"
+                            >ADVANCED CSS AND SASS</a
+                        >. Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Ipsam, voluptatum? Repellendus corporis rem
+                        suscipit expedita mollitia vero ipsa quasi est quas.
+                    </p>
                 </div>
             </div>
         </footer>
