Added and Styled Links to the navigation bar

--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
                 class="navigation__checkbox"
                 id="navi-toggle"
             />
-            <label for="navi-toggle" class="navigation__label">MENU</label>
-            <div class="navigation__background">&nbsp;</div>
+            <label for="navi-toggle" class="navigation__button">MENU</label>
+            <div class="navigation__background"></div>
             <nav class="navigation__nav">
                 <ul class="navigation__list">
                     <li class="navigation__item">
                         <a class="navigation__link" href="index.html"
-                            >About Natorus</a
-                        >
+                            >About Natorus
+                        </a>
                     </li>
                     <li class="navigation__item">
                         <a class="navigation__link" href="index.html"
-                            >Your Benifits</a
-                        >
+                            >Your Benifits
+                        </a>
                     </li>
                     <li class="navigation__item">
                         <a class="navigation__link" href="index.html"
-                            >Popular Tours</a
-                        >
+                            >Popular Tours
+                        </a>
                     </li>
                     <li class="navigation__item">
                         <a class="navigation__link" href="index.html"
@@ -52,8 +52,8 @@
                     </li>
                     <li class="navigation__item">
                         <a class="navigation__link" href="index.html"
-                            >Book Now!</a
-                        >
+                            >Book Now!
+                        </a>
                     </li>
                 </ul>
             </nav>
